# vibegen

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: DeveloperGuide.md
examples/: gemini_client.py  openai_client.py
src/vibegen/: __init__.py  vibegen.py
src/vibegen/config/: config.py
src/vibegen/utils/: logger.py
tests/: test_vibegen.py
tests/utils/: test_logger.py
